--- a/information1.html
+++ b/information1.html
@@ -243,6 +243,36 @@
       </nav>
     </section>
 
+    <section class="list1 cid-tzckW3NyXO" id=""
+    style="margin: 100px;background-color: transparent;"
+  >
+  
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-lg-12">
+                <h3 class="mbr-section-title mbr-fonts-style mb-4 display-2">
+                    <strong>ご挨拶</strong>
+                </h3>
+                <p class="display-7" style="text-indent: 24px;">
+                  株式会社ソフトユージングは、創業以来テクノロジーを通して人類と社会への貢献を果たせるよう進んで参りました。株式の上場を目指し、現在は自社ビルを保有し独自の開発力を用いてAI+IoTを中心に積極的に目標に向けて取り組んでおります。<br>
+                </p>
+                <p class="display-7" style="text-indent: 24px;">
+                  金融・産業・公共多岐に渡る様々な業界の大手顧客にソフトウエア開発や自社製品、運用サービスなどのシステムソリューションサービスを提供する独立系システムインテグレータ。 最先端テクノロジーを活かしたAI×IoT関連自社製品開発とソリューションを提供する企業。<br>
+                </p>
+                <p class="display-7" style="text-indent: 24px;">
+                  人材の育成にも力を入れて社員と会社が共に成長できるよう取り組んでおります。 定期的に実施している新人研修・社員研修など、多様な研修制度を設けており、社員各々の取り組みはしっかりと人事評価へリンクされるよう体制を整えております。 さらに弊社ではチームの力という点で、社員同士がお互いを助け合えるかどうを重視しており、その点について、自社資産である社員寮を保有し、社員の生活をサポートしており、今後も福利厚生を充実させていこうと考えております。<br>
+                </p>     
+                <div style="text-align: right;margin: 20px;">
+                  株式会社ソフトユージング<br>
+                  代表取締役：山田　和夫<br>   
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+</section>
+
     <!-- <section class="footer03 cid-rOMrW38i3d" id="footer03-f">   
 
     <div class="container">
