--- a/security1.html
+++ b/security1.html
@@ -243,6 +243,89 @@
       </nav>
     </section>
 
+    <section class="list1 cid-tzckW3NyXO" id=""
+      style="margin: 100px;background-color: transparent;"
+    >
+    
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-md-12 col-lg-12">
+                  <h3 class="mbr-section-title mbr-fonts-style mb-4 display-2">
+                      <strong>情報セキュリティに関する方針</strong>
+                  </h3>
+                  <p class="mbr-text pb-3 mbr-semibold mbr-black mbr-fonts-style display-6">
+                    当社は、個人情報保護が個人の人格尊重と企業の社会的責務としての重要性を強く認識し、事業のために取り扱う個人情報の適切な保護を徹底するため、以下の事項を個人情報保護方針として定め、かつ維持すると共に、すべての従業員がこの実行に努めることを宣言いたします。
+                  </p>
+                  <h4 class="mbr-section-title mbr-fonts-style mb-4">
+                    <strong>
+                      JIPDEC プライバシーマーク<br>
+                      [登録番号：10824612(03)]
+                    </strong>
+                  </h4>
+                  <ol id="ol11" class="list mbr-fonts-style display-7">
+                      <li>
+                          <strong>個人情報取得、利用、提供及び目的外利用禁止 </strong>
+                          <p>当社は、個人情報保護のためマネージメントシステムを確立し、情報通信サービス産業における適切な個人情報の取得、利用、提供を実現する。また、目的を逸脱した利用がなされない様に確認手順を設けて実施し、体制整備と安全措置を講じます。</p>
+                      </li>
+                      <li>
+                          <strong>法令・規範の順守</strong>
+                          <p>当社は、個人情報取扱に適用される法令、国が定める指針その他の規範を遵守します。また、当社の情報管理規則などを、これらの法令および指針その他の規範に適合させます。</p>
+                      </li>
+                      <li>
+                          <strong>安全管理対策の実施並びに是正</strong>
+                          <p>当社は、個人情報の正確性及び安全性を確保するため、情報セキュリティに関する諸規則に則り、個人情報へのアクセス管理、個人情報の持ち出し手段の制限、外部からの不正アクセス防止などの対策を実施し、個人情報の漏洩、滅失またはき損の防止に努めます。また安全管理対策上の問題が確認された場合など、その原因を特定し、是正措置を講じます。</p>
+                      </li>
+                      <li>
+                          <strong>個人情報に関する本人の権利尊重</strong>
+                          <p>当社は、個人情報に関して本人から自己情報の開示、訂正もしくは削除、または利用もしくは提供の拒否を求められたとき、および苦情、相談の申し出を受けたときは、個人情報に関する本人の権利を尊重し、誠意をもって対応します。</p>
+                      </li>
+                      <li>
+                        <strong>個人情報保護マネージメントシステムの策定及び継続的改善</strong>
+                        <p>当社は、個人情報保護の重要性を強く認識し、個人情報を適切に利用し、保護するための「個人情報保護マネージメントシステム」を策定し、これを着実に実施・維持し、継続的に改善する。</p>
+                    </li>    
+                  </ol>
+                  <div class="display-6">
+                    <table class="table">
+                      <tr>
+                        <td>
+                          株式会社ソフトユージング
+                        </td>
+                        <td>
+                          経営管理部
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          所在地
+                        </td>
+                        <td>
+                          〒140-0013 東京都品川区南大井3-20-5 SU大森ビル
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>
+                          電話番号
+                        </td>
+                        <td>
+                          03-6404-8788
+                        </td>
+                      </tr>
+                    </table>
+                  </div>
+                  <div style="text-align: right;">
+                    株式会社ソフトユージング<br>
+                    代表取締役：山田　和夫<br>    
+                    制定：平成28年12月25日<br>   
+                    改定日：平成29年8月24日<br> 
+
+                  </div>
+              </div>
+          </div>
+
+      </div>
+  </section>
+
+
     <!-- <section class="footer03 cid-rOMrW38i3d" id="footer03-f">   
 
     <div class="container">
