--- a/index.html
+++ b/index.html
@@ -70,57 +70,18 @@
   </head>
   <body>
     <section class="menu cid-rOMrXbthzz" once="menu" id="menu1-h">
-      <nav class="navbar navbar-dropdown navbar-expand-lg"
-        style="height:75px;">
-        <div class="container container-fluid">
-          <div class="collapse navbar-collapse">
-            <a href="index.html">
-              <img
-                src="assets/images/82857ece0869bbfd97910e2c6b3dee1.png"
-                alt="logo" height="50px" width="50px"
-                />
-              <span class="display-4">ソフトユージング</span>
-            </a>
-          </div>
-          <div class="header-right">
-            <span class="socicon-facebook socicon mbr-iconfont
-              mbr-iconfont-social">
-            </span>
-            <span
-              class="mbr-iconfont mbr-iconfont-social socicon-youtube
-              socicon">
-            </span>
-          </div>
-        </div>
-      </nav>
-      <nav class="navbar navbar-dropdown navbar-expand-lg menu navbar-fixed-top
-        cid-rOMrXbthzz" style="margin-top: 60px;">
-        <div class="container container-fluid">
-          <!-- <div class="navbar-brand">
+      <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
+        <div class="container">
+          <div class="navbar-brand">
             <span class="navbar-logo">
               <a href="index.html">
                 <img
                   src="assets/images/82857ece0869bbfd97910e2c6b3dee1.png"
-                  alt="logo" 
+                  alt=""
                 />
-                <span >ソフトユージング</span>
               </a>
-             
             </span>
-          </div> -->
-          <!-- <div class="navbar navbar-brand "> 
-            <a href="index.html">
-              <img
-                src="assets/images/82857ece0869bbfd97910e2c6b3dee1.png"
-                alt="logo" height="45" width="45"
-              />
-              <span class="display-4">ソフトユージング</span>
-            </a>
           </div>
-          <br> -->
-          <!-- <div class="header-right">
-  
-          </div> -->
           <button
             class="navbar-toggler"
             type="button"
@@ -128,7 +89,8 @@
             data-target="#navbarSupportedContent"
             aria-controls="navbarNavAltMarkup"
             aria-expanded="false"
-            aria-label="Toggle navigation">
+            aria-label="Toggle navigation"
+          >
             <div class="hamburger">
               <span></span>
               <span></span>
@@ -137,128 +99,149 @@
             </div>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div style="display: block;">
-              <ul id="secondnavbarul"
-                class="navbar-nav nav-dropdown nav-right"
-                data-app-modern-menu="true">
-                <!-- <li class="nav-item">
-                  <a class="nav-link link text-black display-4" href="#"> </a>
-                </li> -->
-                <li class="nav-item dropdown">
+            <ul
+              class="navbar-nav nav-dropdown nav-right"
+              data-app-modern-menu="true"
+            >
+              <li class="nav-item">
+                <a class="nav-link link text-black display-4" href="#"> </a>
+              </li>
+
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link link dropdown-toggle text-black display-4"
+                  href="#"
+                  aria-expanded="false"
+                  data-toggle="dropdown-submenu"
+                  >会社案内</a
+                >
+                <div class="dropdown-menu">
                   <a
-                    class="nav-link link dropdown-toggle text-black display-4"
-                    href="#"
+                    class="dropdown-item text-black display-4"
+                    href="information1.html"
                     aria-expanded="false"
-                    data-toggle="dropdown-submenu">会社案内</a>
-                  <div class="dropdown-menu">
-                    <a
-                      class="dropdown-item text-black display-4"
-                      href="information1.html"
-                      aria-expanded="false">ご挨拶
-                    </a>
-                    <a
-                      class="dropdown-item text-black display-4"
-                      href="information2.html"
-                      aria-expanded="false">
-                      会社概要</a>
-                    <a
-                      class="dropdown-item text-black display-4"
-                      href="information1.html"
-                      aria-expanded="false">
-                      会社沿革</a>
-                    <a
-                      class="text-black dropdown-item display-4"
-                      href="information1.html"
-                      aria-expanded="false">
-                      組織図
-                    </a>
-                    <a
-                      class="text-black dropdown-item display-4"
-                      href="information1.html"
-                      aria-expanded="false">
-                      主要な取引先
-                    </a>
-                  </div>
-                </li>
-
-                <li class="nav-item">
-                  <a class="nav-link link text-black display-4"
-                    href="bussniess.html">
-                    業務案内</a>
-                </li>
-
-                <li class="nav-item dropdown">
-                  <a
-                    class="nav-link link dropdown-toggle text-black display-4"
-                    href="#"
-                    aria-expanded="false"
-                    data-toggle="dropdown-submenu">会社製品</a>
-                  <div class="dropdown-menu">
-                    <a
-                      class="dropdown-item text-black display-4"
-                      href="product1.html"
-                      aria-expanded="false">AIポイント管理システム
-                    </a>
-                    <a
-                      class="dropdown-item text-black display-4"
-                      href="product2.html"
-                      aria-expanded="false">
-                      SU受発注会計管理システム
-                    </a>
-                    <a
-                      class="dropdown-item text-black display-4"
-                      href="quality.html"
-                      aria-expanded="false">
-                      品質管理方針
-                    </a>
-                  </div>
-                </li>
-
-                <li class="nav-item">
-                  <a class="nav-link link text-black display-4"
-                    href="walfare.html">福利厚生
+                    >ご挨拶
                   </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link link text-black display-4"
-                    href="recuitment.html">採用情報</a>
-                </li>
-                <li class="nav-item dropdown">
                   <a
-                    class="nav-link link dropdown-toggle text-black display-4"
+                    class="dropdown-item text-black display-4"
+                    href="information2.html"
+                    aria-expanded="false"
+                  >
+                    会社概要</a
+                  >
+                  <a
+                    class="dropdown-item text-black display-4"
+                    href="information1.html"
+                    aria-expanded="false"
+                  >
+                    会社沿革</a
+                  >
+                  <a
+                    class="text-black dropdown-item display-4"
+                    href="information1.html"
+                    aria-expanded="false"
+                  >
+                    組織図
+                  </a>
+                  <a
+                    class="text-black dropdown-item display-4"
+                    href="information1.html"
+                    aria-expanded="false"
+                  >
+                    主要な取引先
+                  </a>
+                </div>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link link text-black display-4" href="bussniess.html">
+                  業務案内</a
+                >
+              </li>
+
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link link dropdown-toggle text-black display-4"
+                  href="#"
+                  aria-expanded="false"
+                  data-toggle="dropdown-submenu"
+                  >会社製品</a
+                >
+                <div class="dropdown-menu">
+                  <a
+                    class="dropdown-item text-black display-4"
+                    href="product1.html"
+                    aria-expanded="false"
+                    >AIポイント管理システム
+                  </a>
+                  <a
+                    class="dropdown-item text-black display-4"
+                    href="product2.html"
+                    aria-expanded="false"
+                  >
+                    SU受発注会計管理システム
+                  </a>
+                  <a
+                    class="dropdown-item text-black display-4"
+                    href="quality.html"
+                    aria-expanded="false"
+                  >
+                    品質管理方針
+                  </a>
+                </div>
+              </li>
+
+              <li class="nav-item">
+                <a class="nav-link link text-black display-4" href="walfare.html"
+                  >福利厚生
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link text-black display-4" href="recuitment.html"
+                  >採用情報</a
+                >
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link link dropdown-toggle text-black display-4"
+                  href="security1.html"
+                  aria-expanded="false"
+                  data-toggle="dropdown-submenu"
+                  >個人情報保護方針</a
+                >
+                <div class="dropdown-menu">
+                  <a
+                    class="dropdown-item text-black display-4"
                     href="security1.html"
                     aria-expanded="false"
-                    data-toggle="dropdown-submenu">個人情報保護方針</a>
-                  <div class="dropdown-menu">
-                    <a
-                      class="dropdown-item text-black display-4"
-                      href="security1.html"
-                      aria-expanded="false">個人情報保護方針
-                    </a>
-                    <a
-                      class="dropdown-item text-black display-4"
-                      href="security2.html"
-                      aria-expanded="false">
-                      情報セキュリティに関する方針
-                    </a>
-                    <a
-                      class="dropdown-item text-black display-4"
-                      href="security3.html"
-                      aria-expanded="false">
-                      個人情報の利用目的の公表に関する事項
-                    </a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link link text-black display-4"
-                    href="contract.html">問い合わせ
+                    >個人情報保護方針
                   </a>
-                </li>
-              </ul>
-            </div>
+                  <a
+                    class="dropdown-item text-black display-4"
+                    href="security2.html"
+                    aria-expanded="false"
+                  >
+                    情報セキュリティに関する方針
+                  </a>
+                  <a
+                    class="dropdown-item text-black display-4"
+                    href="security3.html"
+                    aria-expanded="false"
+                  >
+                    個人情報の利用目的の公表に関する事項
+                  </a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link link text-black display-4" href="contract.html"
+                  >問い合わせ
+                </a>
+              </li>
+            </ul>
           </div>
-        </nav>
-      </section>
+        </div>
+      </nav>
+    </section>
 
     <section class="cid-rOMrPX7fgA" id="header01-0">
       <div class="container align-center">
