--- a/information1.html
+++ b/information1.html
@@ -69,7 +69,110 @@
     />
   </head>
   <body>
-    <section class="menu cid-rOMrXbthzz" once="menu" id="menu1-h">
+    <section class="menu cid-rOMrXbthzz" id="menu1-h">
+
+      <div class="">
+        <div class='container container-full'>
+          <div class='ms-title' style="z-index: 1040;" >
+            <a href='index.html'>
+              <img src='assets\images\82857ece0869bbfd97910e2c6b3dee1.png' height='45' width='45'>            
+            </a>
+            
+            <strong>ソフトユージング</strong>
+          </div>
+          <div class='header-right'>
+    
+          </div>
+        </div>
+      </div>
+      <nav class="navbar navbar-dropdown navbar-expand-lg menu
+          cid-rOMrXbthzz" style="position: absolute;padding-top: 45px;z-index: 1038;">
+        <div class="container container-fluid">
+  
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="hamburger">
+              <span></span>
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div style="display: block;">
+              <ul id="secondnavbarul" class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
+  
+                <li class="nav-item dropdown">
+                  <a class="nav-link link dropdown-toggle text-black display-4" href="#" aria-expanded="false"
+                    data-toggle="dropdown-submenu">会社案内</a>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item text-black display-4" href="information1.html" aria-expanded="false">ご挨拶
+                    </a>
+                    <a class="dropdown-item text-black display-4" href="information2.html" aria-expanded="false">
+                      会社概要</a>
+                    <a class="dropdown-item text-black display-4" href="information1.html" aria-expanded="false">
+                      会社沿革</a>
+                    <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                      組織図
+                    </a>
+                    <a class="text-black dropdown-item display-4" href="information1.html" aria-expanded="false">
+                      主要な取引先
+                    </a>
+                  </div>
+                </li>
+  
+                <li class="nav-item">
+                  <a class="nav-link link text-black display-4" href="bussniess.html">
+                    業務案内</a>
+                </li>
+  
+                <li class="nav-item dropdown">
+                  <a class="nav-link link dropdown-toggle text-black display-4" href="#" aria-expanded="false"
+                    data-toggle="dropdown-submenu">会社製品</a>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item text-black display-4" href="product1.html" aria-expanded="false">AIポイント管理システム
+                    </a>
+                    <a class="dropdown-item text-black display-4" href="product2.html" aria-expanded="false">
+                      SU受発注会計管理システム
+                    </a>
+                    <a class="dropdown-item text-black display-4" href="quality.html" aria-expanded="false">
+                      品質管理方針
+                    </a>
+                  </div>
+                </li>
+  
+                <li class="nav-item">
+                  <a class="nav-link link text-black display-4" href="walfare.html">福利厚生
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link link text-black display-4" href="recuitment.html">採用情報</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link link dropdown-toggle text-black display-4" href="security1.html"
+                    aria-expanded="false" data-toggle="dropdown-submenu">個人情報保護方針</a>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item text-black display-4" href="security1.html" aria-expanded="false">個人情報保護方針
+                    </a>
+                    <a class="dropdown-item text-black display-4" href="security2.html" aria-expanded="false">
+                      情報セキュリティに関する方針
+                    </a>
+                    <a class="dropdown-item text-black display-4" href="security3.html" aria-expanded="false">
+                      個人情報の利用目的の公表に関する事項
+                    </a>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link link text-black display-4" href="contract.html">問い合わせ
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+      </nav>
+    </section>
+  
+    <section class="menu cid-rOMrXbthzz" id="menu2-h">
       <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container">
           <div class="navbar-brand">
@@ -106,7 +209,7 @@
               <li class="nav-item">
                 <a class="nav-link link text-black display-4" href="#"> </a>
               </li>
-
+  
               <li class="nav-item dropdown">
                 <a
                   class="nav-link link dropdown-toggle text-black display-4"
@@ -152,13 +255,13 @@
                   </a>
                 </div>
               </li>
-
+  
               <li class="nav-item">
                 <a class="nav-link link text-black display-4" href="bussniess.html">
                   業務案内</a
                 >
               </li>
-
+  
               <li class="nav-item dropdown">
                 <a
                   class="nav-link link dropdown-toggle text-black display-4"
@@ -190,7 +293,7 @@
                   </a>
                 </div>
               </li>
-
+  
               <li class="nav-item">
                 <a class="nav-link link text-black display-4" href="walfare.html"
                   >福利厚生
@@ -242,6 +345,7 @@
         </div>
       </nav>
     </section>
+  
 
     <section class="list1 cid-tzckW3NyXO" id=""
     style="margin: 100px;background-color: transparent;"
