--- a/information2..html
+++ b/information2..html
@@ -15,7 +15,7 @@
     />
     <meta name="description" content="" />
 
-    <title>個人情報保護方針 | 株式会社ソフトユージング</title>
+    <title>会社概要 | 株式会社ソフトユージング</title>
     <link
       rel="stylesheet"
       href="assets/web/assets/mobirise-icons2/mobirise2.css"
@@ -347,38 +347,101 @@
     </section>
   
 
-    <section class="list1 cid-tzckW3NyXO" id=""
-      style="margin: 100px;background-color: transparent;"
-    >
-    
+    <section class="content04 cid-tA2LXn8yz2" id="content04-2">    
+
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-12">
-                  <h3 class="mbr-section-title mbr-fonts-style mb-4 display-2">
-                      <strong>情報セキュリティに関する方針</strong>
-                  </h3>
-                  <p class="mbr-text pb-3 mbr-semibold mbr-black mbr-fonts-style display-7">
-                    株式会社ソフトユージングについて、第一にお客様はもとより、当社のサービスに関わる全ての人々の満足を得る事を目標とし、信頼・安心される会社を目指す。
-                  </p>
-                  <ol id="ol11" class="list mbr-fonts-style display-7">
-                      <li>
-                          <strong style="margin-bottom: 20px;">情報資産の機密性、完全性、可用性を確実に保護するために組織的、技術的に適切な対策を講じ、変化する情報技術や新たな脅威に対応する。 </strong>
-                          <p></p>
-                      </li>
-                      <li>
-                          <strong>全社員に情報セキュリティ教育の実施と方針の周知徹底をはかり、意識の高揚・維持に務める。</strong>
-                          <p></p>
-                      </li>
-                      <li>
-                          <strong>マネジメントシステム及び、情報セキュリティに関する目的を設定し、定期的にレビューし、継続的に改善を実施し、維持する。</strong>
-                          <p></p>
-                      </li>
-                      <li>
-                          <strong>マネジメントシステムを実行・維持・改善して行くために管理責任者に責任と権限を委譲する。</strong>
-                          <p></p>
-                      </li>   
-                  </ol>
+  
+                  <h2 class="mbr-section-title pb-3 mbr-bold pb-3 mbr-fonts-style display-5">会社概要</h2>
+  
               </div>
+  
+  
+              <div class="mbr-black col-md-12 col-lg-6">
+  
+  
+                  <ul>
+                      <li class="item-title mbr-bold mbr-fonts-style display-4">How do I <a href="#">sign up</a>?<br>
+                          <p class="mbr-text mbr-regular mbr-fonts-style">Getting Started / Creating an Account</p>
+  
+                      </li>
+  
+  
+                      <li class="item-title mbr-bold mbr-fonts-style display-4">Why was my bank account <a href="#">rejected</a>?<br>
+                          <p class="mbr-text mbr-regular mbr-fonts-style">Getting Started / Bank Account Verification
+                          </p>
+  
+                      </li>
+  
+  
+                      <li class="item-title mbr-bold mbr-fonts-style display-4">Do I have to sign a data <a href="#">processing agreement</a>?<br>
+                          <p class="mbr-text mbr-regular mbr-fonts-style">Getting Started / General Data Protection
+                              Regulation</p>
+  
+                      </li>
+  
+                      <li class="item-title mbr-bold mbr-fonts-style display-4">How do I <a href="#">link payments&nbsp;</a>to my <a href="#">website</a>?<br>
+                          <p class="mbr-text mbr-regular mbr-fonts-style">Integration / I have a general question
+                              about integrating</p>
+  
+                      </li>
+  
+                      <li class="item-title mbr-bold mbr-fonts-style display-4">How do I <a href="#">refund </a>a payment to one of my
+                          consumers?<br>
+                          <p class="mbr-text mbr-regular mbr-fonts-style">Payments / Refunds</p>
+  
+                      </li>
+  
+  
+  
+                  </ul>
+  
+  
+              </div>
+  
+  
+              <div class="mbr-black col-md-12 col-lg-6">
+  
+  
+                  <ul>
+                      <li class="item-title mbr-bold mbr-fonts-style display-4">How do I <a href="#">activate payment methods</a> in my account?<br>
+                          <p class="mbr-text mbr-regular mbr-fonts-style">Getting Started / Activating Payment Methods
+                          </p>
+  
+                      </li>
+  
+  
+                      <li class="item-title mbr-bold mbr-fonts-style display-4">Is a <a href="#">business account</a> compulsory?<br>
+                          <p class="mbr-text mbr-regular mbr-fonts-style">Getting Started / Bank Account Verification
+                          </p>
+  
+                      </li>
+  
+  
+                      <li class="item-title mbr-bold mbr-fonts-style display-4">How do I <a href="#">activate credit card</a> payments?<br>
+                          <p class="mbr-text mbr-regular mbr-fonts-style">Payment Methods / Credit Card</p>
+  
+                      </li>
+  
+                      <li class="item-title mbr-bold mbr-fonts-style display-4">When does <a href="#">pay out</a>?<br>
+                          <p class="mbr-text mbr-regular mbr-fonts-style">Payments / Payouts</p>
+  
+                      </li>
+  
+                      <li class="item-title mbr-bold mbr-fonts-style display-4">How do I <a href="#">become a partner</a>?<br>
+                          <p class="mbr-text mbr-regular mbr-fonts-style">Partners / Partner Program</p>
+  
+                      </li>
+  
+  
+  
+                  </ul>
+  
+  
+              </div>
+  
+  
           </div>
       </div>
   </section>
@@ -618,6 +681,7 @@
   
     </div>
   </section>
+
     <script src="assets/web/assets/jquery/jquery.min.js"></script>
     <script src="assets/popper/popper.min.js"></script>
     <script src="assets/tether/tether.min.js"></script>
