--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                 <h4
                   class="card-title align-center mbr-semibold mbr-black mbr-fonts-style display-7"
                 >
-                  <strong>Partners</strong>
+                  <strong>(株)日立ソリューションズ</strong>
                 </h4>
               </div>
             </div>
@@ -725,7 +725,7 @@
                 <h4
                   class="card-title align-center mbr-semibold mbr-black mbr-fonts-style display-7"
                 >
-                  <strong>Partners</strong>
+                  <strong>(株)日立ソリューションズ・クリエイト</strong>
                 </h4>
               </div>
             </div>
@@ -737,20 +737,7 @@
                 <h4
                   class="card-title align-center mbr-semibold mbr-black mbr-fonts-style display-7"
                 >
-                  <strong>Partners</strong>
-                </h4>
-              </div>
-            </div>
-          </div>
-
-          <div class="card p-3 col-12 col-md-4 col-lg-2">
-            <div class="card-wrapper">
-              <div class="card-box align-center">
-                <span class="mbr-iconfont mobi-mbri-users mobi-mbri"></span>
-                <h4
-                  class="card-title align-center mbr-semibold mbr-black mbr-fonts-style display-7"
-                >
-                  <strong>Partners</strong>
+                  <strong>富士ソフト(株)</strong>
                 </h4>
               </div>
             </div>
@@ -763,7 +750,7 @@
                 <h4
                   class="card-title align-center mbr-semibold mbr-black mbr-fonts-style display-7"
                 >
-                  <strong>Partners</strong>
+                  <strong>日鉄ソリューションズ(株)</strong>
                 </h4>
               </div>
             </div>
@@ -776,7 +763,20 @@
                 <h4
                   class="card-title align-center mbr-semibold mbr-black mbr-fonts-style display-7"
                 >
-                  <strong>Partners</strong>
+                  <strong>東芝デジタルソリューションズ(株)</strong>
+                </h4>
+              </div>
+            </div>
+          </div>
+
+          <div class="card p-3 col-12 col-md-4 col-lg-2">
+            <div class="card-wrapper">
+              <div class="card-box align-center">
+                <span class="mbr-iconfont mobi-mbri-users mobi-mbri"></span>
+                <h4
+                  class="card-title align-center mbr-semibold mbr-black mbr-fonts-style display-7"
+                >
+                  <strong>(株)CIJ</strong>
                 </h4>
               </div>
             </div>
@@ -785,7 +785,7 @@
       </div>
     </section>
 
-    <section class="content02 cid-rOMrSIIGez" id="content02-8">
+    <!-- <section class="content02 cid-rOMrSIIGez" id="content02-8">
       <div class="container">
         <div class="row justify-content-center">
           <div class="img-col col-12 md-pb col-md-12 col-lg-6 m-auto">
@@ -812,18 +812,89 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
+
+    <section class="teams1 cid-tA3YuDLXrQ" id="team01-5">   
+      <div class="container">
+          <div class="row justify-content-center">
+              <!-- <div class="col-12 main-heading pb-5">
+                  <h2 class="mbr-section-title main-title mbr-fonts-style align-center mbr-black display-2"><strong>
+                          Our team</strong></h2>
+                  
+              </div> -->
+              <div class="col-sm-6 team-card col-lg-4">
+                  <div class="card-wrap">
+                      <div class="image-wrap">
+                          <img src="assets/images/51.jpg" alt="">
+                      </div>
+                      <div class="content-wrap">
+                          <h3 class="mbr-section-title card-title mbr-fonts-style align-center mbr-black display-5">
+                              オフィス環境
+                          </h3>
+                          <h3 class="mbr-section-subtitle mbr-fonts-style mbr-role align-center pt-2 display-4">
+                            会議室
+                          </h3>
+                          <!-- <h3 class="mbr-section-subtitle mbr-fonts-style card-text align-center mbr-lighter pt-3 display-4">
+                              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, pariatur.
+                          </h3> -->
+                          <!-- <div class="mbr-section-btn card-btn align-center"><a class="btn btn-md btn-primary display-4" href="#">CONTACT</a></div> -->
+                      </div>
+                  </div>
+              </div>
+  
+              <div class="col-sm-6 team-card col-lg-4">
+                  <div class="card-wrap">
+                      <div class="image-wrap">
+                          <img src="assets/images/46.jpg" alt="">
+                      </div>
+                      <div class="content-wrap">
+                          <h3 class="mbr-section-title card-title mbr-fonts-style align-center mbr-black display-5">
+                            オフィス環境
+                          </h3>
+                          <h3 class="mbr-section-subtitle mbr-fonts-style mbr-role align-center pt-2 display-4">
+                             リラックススペース
+                            </h3>
+                          <!-- <h3 class="mbr-section-subtitle mbr-fonts-style card-text align-center mbr-lighter pt-3 display-4">
+                              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, pariatur.
+                          </h3> -->
+                          <!-- <div class="mbr-section-btn card-btn align-center"><a class="btn btn-md btn-primary display-4" href="#">CONTACT</a></div> -->
+                      </div>
+                  </div>
+              </div>
+  
+              <div class="col-sm-6 team-card col-lg-4 last-row-card last-card">
+                  <div class="card-wrap">
+                      <div class="image-wrap">
+                          <img src="assets/images/44.jpg" alt="">
+                      </div>
+                      <div class="content-wrap">
+                          <h3 class="mbr-section-title card-title mbr-fonts-style align-center mbr-black display-5">
+                            オフィス環境
+                          </h3>
+                          <h3 class="mbr-section-subtitle mbr-fonts-style mbr-role align-center pt-2 display-4">
+                            図書室
+                          </h3>
+                          <!-- <h3 class="mbr-section-subtitle mbr-fonts-style card-text align-center mbr-lighter pt-3 display-4">
+                              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, pariatur.
+                          </h3> -->
+                          <!-- <div class="mbr-section-btn card-btn align-center"><a class="btn btn-md btn-primary display-4" href="#">CONTACT</a></div> -->
+                      </div>
+                  </div>
+              </div>             
+          </div>
+      </div>
+  </section>
 
     <section class="video1 cid-rOMrU1FOrT" id="video01-9">
       <div class="container align-center">
         <div class="row justify-content-md-center">
-          <div class="mbr-black col-md-12 col-lg-12">
+          <!-- <div class="mbr-black col-md-12 col-lg-12">
             <h1
               class="mbr-section-title align-center mbr-bold pb-4 mbr-fonts-style display-2"
             >
               採用情報
             </h1>
-          </div>
+          </div> -->
 
           <div class="mbr-white col-md-12 col-12 col-lg-12">
             <div class="box">
@@ -868,6 +939,13 @@
     <section class="content03 cid-rOMrUs0heE" id="content03-a">
       <div class="container">
         <div class="row">
+          <div class="mbr-black col-md-12 col-lg-12">
+            <h1
+              class="mbr-section-title align-center mbr-bold pb-4 mbr-fonts-style display-2"
+            >
+              採用情報
+            </h1>
+          </div>
           <div class="card col-12 col-md-12 col-lg-6">
             <div class="card-wrapper">
               <div class="card-box align-left">
@@ -1364,26 +1442,30 @@
               display-7"><strong>会社案内</strong></h3>
         <ul class="list">
 
-
           <li class="item-wrap align-left">
-
-            <h4 class="item1 mbr-regular mbr-fonts-style display-4">ご挨拶</h4>
+            <a href="information1.html">
+              <h4 class="item1 mbr-regular mbr-fonts-style display-4">ご挨拶</h4>
+            </a>
           </li>
           <li class="item-wrap align-left">
-
-            <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社概要</h4>
+            <a href="information2.html">
+              <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社概要</h4>
+            </a>
           </li>
           <li class="item-wrap align-left">
-
-            <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社沿革</h4>
+            <a href="information1.html">
+              <h4 class="item1 mbr-regular mbr-fonts-style display-4">会社沿革</h4>
+            </a>
           </li>
           <li class="item-wrap align-left">
-
-            <h4 class="item1 mbr-regular mbr-fonts-style display-4">組織図</h4>
+            <a href="information1.html">
+              <h4 class="item1 mbr-regular mbr-fonts-style display-4">組織図</h4>
+            </a>
           </li>
           <li class="item-wrap align-left">
-
-            <h4 class="item1 mbr-regular mbr-fonts-style display-4">主要な取引先</h4>
+            <a href="information1.html">
+              <h4 class="item1 mbr-regular mbr-fonts-style display-4">主要な取引先</h4>
+            </a>
           </li>
         </ul>
 
@@ -1396,28 +1478,22 @@
         <ul class="list">
 
 
-
-
-
           <li class="item-wrap">
-
-            <h4 class="item2 mbr-regular mbr-fonts-style display-4">会社製品</h4>
+            <a href="walfare.html">
+              <h4 class="item2 mbr-regular mbr-fonts-style display-4">福利厚生</h4>
+            </a>
+          <li class="item-wrap">
+            <a href="recuitment.html">
+              <h4 class="item2 mbr-regular mbr-fonts-style display-4">採用情報</h4>
+            </a>
           </li>
           <li class="item-wrap">
 
-            <h4 class="item2 mbr-regular mbr-fonts-style display-4">福利厚生</h4>
+            <h4 class="item2 mbr-regular mbr-fonts-style display-4"></h4>
           </li>
           <li class="item-wrap">
 
-            <h4 class="item2 mbr-regular mbr-fonts-style display-4">採用情報</h4>
-          </li>
-          <li class="item-wrap">
-
-            <h4 class="item2 mbr-regular mbr-fonts-style display-4">個人情報保護方針</h4>
-          </li>
-          <li class="item-wrap">
-
-            <h4 class="item2 mbr-regular mbr-fonts-style display-4">品質管理方針</h4>
+            <h4 class="item2 mbr-regular mbr-fonts-style display-4"></h4>
           </li>
         </ul>
 
@@ -1427,24 +1503,23 @@
       <div class="col-6 col-md-4 col-lg-2 md-pb">
 
         <h3 class="col-title3 mbr-semibold pb-3 mbr-fonts-style
-              display-7"><strong>アドレス</strong></h3>
+              display-7"><strong>会社製品</strong></h3>
         <ul class="list">
 
-
-
-
-
           <li class="item-wrap">
-
-            <h4 class="item3 mbr-regular mbr-fonts-style display-4">東京都<br>品川区<br>南大井</h4>
+            <a href="product1.html">
+              <h4 class="item3 mbr-regular mbr-fonts-style display-4">AIポイント管理システム</h4>
+            </a>
           </li>
           <li class="item-wrap">
-
-            <h4 class="item3 mbr-regular mbr-fonts-style display-4">3-20-5<br>SU大森ビル</h4>
+            <a href="product2.html">
+              <h4 class="item3 mbr-regular mbr-fonts-style display-4">SU受発注会計管理システム</h4>
+            </a>
           </li>
           <li class="item-wrap">
-
-            <h4 class="item3 mbr-regular mbr-fonts-style display-4"></h4>
+            <a href="quality.html">
+              <h4 class="item3 mbr-regular mbr-fonts-style display-4">品質管理方針</h4>
+            </a>
           </li>
           <li class="item-wrap">
 
@@ -1461,7 +1536,7 @@
       <div class="col-6 col-md-4 col-lg-2 md-pb">
 
         <h3 class="col-title4 mbr-semibold pb-3 mbr-fonts-style
-              display-7"><strong>アクセス</strong></h3>
+              display-7"><strong>個人情報保護方針</strong></h3>
         <ul class="list">
 
 
@@ -1469,20 +1544,20 @@
 
 
           <li class="item-wrap">
-
-            <h4 class="item4 mbr-regular mbr-fonts-style display-4">京急線<br>大森海岸駅<br>徒歩2分></h4>
+            <a href="security1.html">
+              <h4 class="item4 mbr-regular mbr-fonts-style display-4">個人情報の取扱いに関する方針</h4>
+            </a>
           </li>
           <li class="item-wrap">
-
-            <h4 class="item4 mbr-regular mbr-fonts-style display-4"> </h4>
+            <a href="security2.html">
+              <h4 class="item4 mbr-regular mbr-fonts-style display-4">情報セキュリティに関する方針</h4>
+            </a>
           </li>
-          <!-- <li class="item-wrap">
 
-            <h4 class="item4 mbr-regular mbr-fonts-style display-4">　</h4>
-          </li> -->
           <li class="item-wrap">
-
-            <h4 class="item4 mbr-regular mbr-fonts-style display-4">JR大森駅北口<br>徒歩8分</h4>
+            <a href="security3.html">
+              <h4 class="item4 mbr-regular mbr-fonts-style display-4">個人情報の利用目的の公表に関する事項</h4>
+            </a>
           </li>
           <li class="item-wrap">
 
@@ -1497,8 +1572,12 @@
 
         <h3 class="col-title4 mbr-semibold pb-3 mbr-fonts-style
               display-7"><strong>お問い合わせ</strong></h3>
-        <p class="col-text mbr-regular pb-3 mbr-fonts-style display-4">
-          お問い合わせフォーム</p>
+        <a href="contract.html">
+          <p class="col-text mbr-regular pb-3 mbr-fonts-style display-4">
+            お問い合わせフォーム
+          </p>
+
+        </a>
 
 
         <h3 class="col-title4 mbr-semibold pb-2 mbr-fonts-style
@@ -1554,94 +1633,28 @@
   </div>
 </section>
 
-<section class="footer6 cid-tzj5OSbn0L" once="footers" id="footer6-p">
+<section once="footers" class="cid-rOMqzZYNMx" id="footer02-0">
+
+
+
+
+
   <div class="container">
-    <!-- <div class="row content mbr-white">
-          <div class="col-12 col-md-3 mbr-fonts-style display-7">
-            <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
-              <strong>アドレス</strong>
-            </h5>
-            <p class="mbr-text mbr-fonts-style display-7">
-              東京都品川区南大井3-20-5 <br />SU大森ビル
-            </p>
-            <br />
-            <h5
-              class="mbr-section-subtitle mbr-fonts-style mb-2 mt-4
-              display-7">
-              <strong>連絡先</strong>
-            </h5>
-            <p class="mbr-text mbr-fonts-style mb-4 display-7">
-              <span class="mobi-mbri mobi-mbri-letter mbr-iconfont"></span>&nbsp;(メール):
-              <br />info@softusing.co.jp <br />
-              <span class="mobi-mbri mobi-mbri-phone mbr-iconfont"></span>&nbsp;(電話):
-              <br />03-6404-8788 <br />
-              <span class="fa fa-fax mbr-iconfont"></span>(ファクス) :<br />
-              03-6404-8784<br /><br />
-            </p>
-          </div>
-          <div class="col-12 col-md-3 mbr-fonts-style display-7">
-            <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7">
-              <strong>お問い合わせ</strong><strong></strong>
-            </h5>
-            <p class="mbr-text mbr-fonts-style display-7">
-              <a href="page3.html" class="text-primary">お問い合わせフォーム</a><br />
-              <a class="text-primarys"> </a>
-            </p>
-            <p class="mbr-text mbr-fonts-style display-7"><br /></p>
-            <h5
-              class="mbr-section-subtitle mbr-fonts-style mb-2 mt-5
-              display-7">
-              <strong>アクセス</strong>
-            </h5>
-            <p class="mbr-text mbr-fonts-style mb-4 display-7">
-              京急線大森海岸駅 <br>徒歩2分<br />JR大森駅北口 <br>徒歩8分
-            </p>
-          </div>
-          <div class="col-12 col-md-6">
-            iframe width="100%" height="380" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJK37_sM1hGGARFCqmCL1LSWo&key=AIzaSyC9YrEnfcCb4ka9vMfFF23NjtymV5Pdo8I"></iframe>
-            <img
-              src="assets/images/1aa66a78c1c386813f86b5cfbb6f021-1076x596.jpg"
-              width="100%"
-              height="380"
-              alt=""
-              />
-          </div>
-          <div class="col-md-6">
-            <div class="social-list align-left">
-              <div class="soc-item">
-                <a
-                  href="https://www.youtube.com/channel/UCObuVm3GUbKmB5-Dg4hY0CQ/featured?view_as=subscriber"
-                  target="_blank">
-                  <span
-                    class="mbr-iconfont mbr-iconfont-social socicon-youtube
-                    socicon">
-                  </span>
-                </a>
-              </div>
-              <div class="soc-item">
-                <a
-                  href="https://www.facebook.com/trip7tv?epa=SEARCH_BOX"
-                  target="_blank">
-                  <span
-                    class="mbr-iconfont mbr-iconfont-social socicon-facebook
-                    socicon"></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div> -->
-    <div class="footer-lower">
-      <div class="media-container-row">
-        <div class="col-sm-12">
-          <hr />
-        </div>
+
+    <div class="row mbr-white">
+      <div class="col-12 copyright align-left col-lg-6 col-md-4">
+        <p class="mbr-text mb-0 mbr-fonts-style align-left display-4">
+          Copyright ©2017 softusing.co.jp</p>
       </div>
-      <div class="col-sm-12 copyright pl-0">
-        <p class="mbr-text mbr-fonts-style mbr-white display-7">
-          Copyright ©2017 softusing.co.jp
+      <div class="col-12 col-lg-6 col-md-8">
+        <p class="mbr-text align-right mbr-fonts-style align-right display-4">
+          東京都品川区南大井3-20-5 SU大森ビル
         </p>
       </div>
+
+
     </div>
+
   </div>
 </section>
     
